--- a/Game Kataloger/src/main/res/values/strings.xml
+++ b/Game Kataloger/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">Game Kataloger</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hello world!</string><string name="addgame">Añadir Juego</string><string name="games">Juegos</string><string name="wishlist">Wishlist</string><string name="consoles">Consolas y Accesorios</string><string name="plataform">Plataformas</string><string name="genres">Generos</string>
 
 </resources>
